@@ -48,7 +48,6 @@ class ClassifyTags(Taxonomy):
     apply_to_posts = True
     apply_to_pages = False
     omit_empty_classifications = True
-    also_create_classifications_from_other_languages = False
     add_other_languages_variable = True
     path_handler_docstrings = {
         'tag_index': """A link to the tag index.
